--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -27,9 +27,8 @@ title: Work tray
                    <tr>
                      <th scope="col" class="d-none d-md-table-cell">Photo</th>
                      <th scope="col">Name<i class="fa fa-sort ms-1"></i></th>
-                     <th scope="col" class="d-none d-md-table-cell">Case ID<i class="fa fa-sort ms-1"></i></th>
                      <th scope="col" class="d-none d-md-table-cell">Year<i class="fa fa-sort ms-1"></i></th>
-                     <th scope="col">Setting</th>
+                     <th scope="col" class="d-none d-md-table-cell">Setting</th>
                      <th scope="col">Status<i class="fa fa-sort ms-1"></i></th>
                      <th scope="col" class="d-none d-md-table-cell">Next due<i class="fa fa-sort ms-1"></i></th>
                      <th scope="col" class="d-none d-md-table-cell">Updated<i class="fa fa-sort ms-1"></i></th>
@@ -39,10 +38,12 @@ title: Work tray
                  <tbody>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy in a forest.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Alvin"></td>
-                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Hanson, Alvin-Tucker</a></td>
-                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
+                     <td class="table-name-label">
+                       <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Hanson, Alvin-Tucker</a>
+                       <p class="text-muted mb-0"><small>EHC/21/0123</small></p>
+                     </td>
                      <td class="d-none d-md-table-cell">Year 9</td>
-                     <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
+                     <td class="d-none d-md-table-cell text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
                      <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="EHC needs assessment in progress">Assessment</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
@@ -50,10 +51,12 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Ellery"></td>
-                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Holden, Ellery</a></td>
-                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
+                     <td class="table-name-label">
+                       <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Holden, Ellery</a>
+                       <p class="text-muted mb-0"><small>EHC/21/0123</small></p>
+                     </td>
                      <td class="d-none d-md-table-cell">Year 4</td>
-                     <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Oak Junior School">Oak Junior School</span></td>
+                     <td class="d-none d-md-table-cell text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Oak Junior School">Oak Junior School</span></td>
                      <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="Awaiting a decision to issue an EHC Plan or not">EHCP Decision</span></td>
                      <td class="d-none d-md-table-cell">14/01/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
@@ -67,10 +70,12 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/girl at school.jpg" class="rounded d-block idx-avatar-card" alt="Photo of  Sienna"></td>
-                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Reid, Sienna</a></td>
-                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
+                     <td class="table-name-label">
+                       <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Reid, Sienna</a>
+                       <p class="text-muted mb-0"><small>EHC/21/0123</small></p>
+                     </td>
                      <td class="d-none d-md-table-cell">Year 2</td>
-                     <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
+                     <td class="d-none d-md-table-cell text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
                      <td><span class="badge rounded-pill text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment to the EHCP (outside of review) is being drafted">Draft Amend</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
@@ -78,10 +83,12 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
-                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Tate, Chandler</a></td>
-                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
+                     <td class="table-name-label">
+                       <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Tate, Chandler</a>
+                       <p class="text-muted mb-0"><small>EHC/21/0123</small></p>
+                     </td>
                      <td class="d-none d-md-table-cell">Year 13</td>
-                     <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
+                     <td class="d-none d-md-table-cell text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
                      <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and views are requested">Review Arranged</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
@@ -93,10 +100,12 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
-                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Wagner, Victor</a></td>
-                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
+                     <td class="table-name-label">
+                       <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Wagner, Victor</a>
+                       <p class="text-muted mb-0"><small>EHC/21/0123</small></p>
+                     </td>
                      <td class="d-none d-md-table-cell">Year 11</td>
-                     <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
+                     <td class="d-none d-md-table-cell text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
                      <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review report in progress">Review Report</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
