Case home and card header tidy up

--- a/case-view/index.html
+++ b/case-view/index.html
@@ -38,15 +38,15 @@ title: Case summary
 
         <!-- Cards -->
 
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-6">
 
           <!-- EHCPs card -->
           <div class="col">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-header">
                 <div class="d-flex align-items-center">
-                  <i class="fal fa-file-contract fa-2x me-3 text-secondary" aria-hidden="true"></i>
-                  <h5 class="card-title mb-0">EHC Plan</h5>
+                  <i class="fal fa-file-contract fa-lg me-3 text-neutral-500" aria-hidden="true"></i>
+                  EHC Plan
                   <div class="dropdown ms-auto">
                     <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fal fa-cog" aria-hidden="true"></i>
@@ -62,10 +62,11 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge rounded-pill text-bg-success my-2">Active</span>
-                <p class="card-text">All plans stored on the hub in chronological order.</p>
               </div>
               <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  All plans stored on the hub in chronological order.
+                </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
@@ -103,8 +104,8 @@ title: Case summary
                   </div>
                 </li>
               </ul>
-              <div class="card-footer">
-                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
+              <div class="card-footer fs-3 d-flex justify-content-center">
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-1" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -112,10 +113,10 @@ title: Case summary
           <!-- Review card -->
           <div class="col">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-header">
                 <div class="d-flex align-items-center">
-                  <i class="fal fa-sync-alt fa-2x me-3 text-secondary" aria-hidden="true"></i>
-                  <h5 class="card-title mb-0">Reviews</h5>
+                  <i class="fal fa-sync-alt fa-lg me-3 text-neutral-500" aria-hidden="true"></i>
+                  Reviews
                   <div class="dropdown ms-auto">
                     <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fal fa-cog" aria-hidden="true"></i>
@@ -132,10 +133,11 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge rounded-pill text-bg-warning my-2">Not started</span>
-                <p class="card-text">Reviewing outomes agreed in the EHC Plan.</p>
               </div>
               <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  Regularly reviewing outomes agreed in the EHC Plan.
+                </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
@@ -173,8 +175,8 @@ title: Case summary
                   </div>
                 </li>
               </ul>
-              <div class="card-footer">
-                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
+              <div class="card-footer fs-3 d-flex justify-content-center">
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-1" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -182,10 +184,10 @@ title: Case summary
           <!-- Assessment card -->
           <div class="col">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-header">
                 <div class="d-flex align-items-center">
-                  <i class="fal fa-chalkboard-teacher fa-2x me-3 text-secondary" aria-hidden="true"></i>
-                  <h5 class="card-title mb-0">Assessment</h5>
+                  <i class="fal fa-chalkboard-teacher fa-lg me-3 text-neutral-500" aria-hidden="true"></i>
+                  Assessment
                   <div class="dropdown ms-auto">
                     <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fal fa-cog" aria-hidden="true"></i>
@@ -198,10 +200,11 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge rounded-pill text-bg-success my-2">Pathway completed</span>
-                <p class="card-text">The needs assessment and planning pathway.</p>
               </div>
               <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  The needs assessment and planning pathway.
+                </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
@@ -239,8 +242,8 @@ title: Case summary
                   </div>
                 </li>
               </ul>
-              <div class="card-footer">
-                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+              <div class="card-footer fs-3 d-flex justify-content-center">
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-1" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
@@ -248,10 +251,10 @@ title: Case summary
           <!-- Letters card -->
           <div class="col">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-header">
                 <div class="d-flex align-items-center">
-                  <i class="fal fa-file-alt fa-2x me-3 text-secondary" aria-hidden="true"></i>
-                  <h5 class="card-title mb-0">Letters</h5>
+                  <i class="fal fa-file-alt fa-lg me-3 text-neutral-500" aria-hidden="true"></i>
+                  Letters
                   <div class="dropdown ms-auto">
                     <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fal fa-cog" aria-hidden="true"></i>
@@ -264,10 +267,11 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge rounded-pill text-bg-success my-2">1 new</span>
-                <p class="card-text">Letters containing important information.</p>
               </div>
               <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  Letters containing important progress information.
+                </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
@@ -305,8 +309,8 @@ title: Case summary
                   </div>
                 </li>
               </ul>
-              <div class="card-footer">
-                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+              <div class="card-footer fs-3 d-flex justify-content-center">
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-1" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
@@ -314,10 +318,10 @@ title: Case summary
           <!-- Mediation card -->
           <div class="col">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-header">
                 <div class="d-flex align-items-center">
-                  <i class="fal fa-balance-scale fa-2x me-3 text-secondary" aria-hidden="true"></i>
-                  <h5 class="card-title mb-0">Mediation & Tribunal</h5>
+                  <i class="fal fa-balance-scale fa-lg me-3 text-neutral-500" aria-hidden="true"></i>
+                  Mediation & Tribunal
                   <div class="dropdown ms-auto">
                     <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fal fa-cog" aria-hidden="true"></i>
@@ -329,10 +333,11 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge rounded-pill text-bg-secondary my-2 me-1">2 Mediation</span><span class="badge rounded-pill text-bg-secondary my-2">1 Tribunal</span>
-                <p class="card-text">A chronology of mediation and tribunal activity.</p>
               </div>
               <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  A chronology of mediation and tribunal activity.
+                </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
@@ -370,8 +375,8 @@ title: Case summary
                   </div>
                 </li>
               </ul>
-              <div class="card-footer">
-                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+              <div class="card-footer fs-3 d-flex justify-content-center">
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-1" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
