Updated assessment and advice pages

--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -210,6 +210,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4 rounded-top-4"><img class="mx-auto" src="/assets/images/about_1.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things that are important to me</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-muted"><small>Views missing<i class="fal fa-times ms-1"></i></small></p>
                  </div>
                </div>
@@ -222,6 +224,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_2.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things that are working well at home and school</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -234,6 +238,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_3.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Other information I think is important to know about me</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -246,6 +252,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_4.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Important things to know about my past</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -258,6 +266,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_5.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things I enjoy doing</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -270,6 +280,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_6.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">How to communicate with me</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -282,6 +294,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_7.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">My hopes, dreams and aspirations for the future</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -294,6 +308,8 @@ title: EHC Hub
                  <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_8.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things I would like to change at home and school</p>
+                 </div>
+                 <div class="card-footer">
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                  </div>
                </div>
@@ -315,6 +331,8 @@ title: EHC Hub
                   <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_1.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Important things to know about our family history</p>
+                  </div>
+                  <div class="card-footer">
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                   </div>
                 </div>
@@ -327,6 +345,8 @@ title: EHC Hub
                   <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_2.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Things that are working well at home and school</p>
+                  </div>
+                  <div class="card-footer">
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                   </div>
                 </div>
@@ -339,6 +359,8 @@ title: EHC Hub
                   <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_3.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Things that are not working well and we would like to change</p>
+                  </div>
+                  <div class="card-footer">
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                   </div>
                 </div>
@@ -351,6 +373,8 @@ title: EHC Hub
                   <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_4.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Our hopes and aspirations for the future</p>
+                  </div>
+                  <div class="card-footer">
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                   </div>
                 </div>
@@ -363,6 +387,8 @@ title: EHC Hub
                   <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_5.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Other information we think is important</p>
+                  </div>
+                  <div class="card-footer">
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
                   </div>
                 </div>
