--- a/case-view/advice.html
+++ b/case-view/advice.html
@@ -390,7 +390,48 @@ title: EHC Hub
               </div>
               <div class="card-body px-6">
                 <p class="card-text callout callout-info">Upload any additional documents which may evidence your advice.</p>
-                <p class="card-text">...</p>
+                <div class="mb-5 table-responsive">
+                 <table class="table table-striped table-hover table-borderless idx-results-table align-middle no-wrap mt-0">
+                   <thead>
+                     <tr>
+                       <th scope="col">Label<i class="fa fa-sort ms-1"></i></th>
+                       <th scope="col">Filename<i class="fa fa-sort ms-1"></i></th>
+                       <th scope="col" class="text-center">Actions</th>
+                     </tr>
+                   </thead>
+                   <tbody>
+                     <tr>
+                       <td class="table-name-label">SALT report</td>
+                       <td>salt_assessment_report_CT.pdf</td>
+                       <td class="text-center">
+                         <div class="dropdown dropstart">
+                           <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                             <i class="fal fa-ellipsis-v-alt"></i>
+                           </a>
+                           <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" href="#">Remove</a></li>
+                           </ul>
+                         </div>
+                       </td>
+                     </tr>
+                     <tr>
+                       <td class="table-name-label">SALT report</td>
+                       <td>salt_assessment_report_CT.pdf</td>
+                       <td class="text-center">
+                         <div class="dropdown dropstart">
+                           <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                             <i class="fal fa-ellipsis-v-alt"></i>
+                           </a>
+                           <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" href="#">Remove</a></li>
+                           </ul>
+                         </div>
+                       </td>
+                     </tr>
+                   </tbody>
+                 </table>
+               </div>
+                <a class="btn btn-neutral-50 me-2 mt-2" href="#"><i class="fal fa-file-upload me-2"></i>Upload document</a>
               </div>
               <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
