Updated buttons and labels

--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -28,7 +28,7 @@ title: EHC Hub
 
         <!-- Callout -->
         <div class="callout callout-info mb-0">
-          <h3>EHC Needs Assessment</h3>
+          <h3>Step 3: EHC Needs Assessment</h3>
           <p>Assessment process under Section 36 (1) of the Children and Families Act 2014. Please ensure that all relevant professional contributors have been requested to provide advice and the family have appropriate support in place to complete "About me" and "Parent/carer's views" below.</p>
         </div>
 
