--- a/case-view/index.html
+++ b/case-view/index.html
@@ -394,8 +394,15 @@ title: Case summary
       <div class="col">
 
         <div class="d-flex flex-column flex-md-row justify-content-md-end">
-          <a href="#" class="btn btn-neutral-50 me-auto mb-2 mb-md-0 me-md-0 ms-md-2"><i class="fal fa-eye-slash me-2" aria-hidden="true"></i>Unhide cards</a>
-          <a href="#" class="btn btn-neutral-50 me-auto mb-2 mb-md-0 me-md-0 ms-md-2"><i class="fal fa-undo-alt me-2" aria-hidden="true"></i>Reset card order</a>
+          <div class="dropdown">
+            <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fal fa-ellipsis-v-alt px-1"></i>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Unhide cards</a></li>
+              <li><a class="dropdown-item" href="#">Reset card order</a></li>
+            </ul>
+          </div>
         </div>
 
       </div>
