Saved search and reporting changes

--- a/onboarding/tfa-phrase-auth.html
+++ b/onboarding/tfa-phrase-auth.html
@@ -40,7 +40,9 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
+			<div class="text-center my-2">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a>
+			</div>
 
 		</main>
 
