--- a/onboarding/tfa-sms-2.html
+++ b/onboarding/tfa-sms-2.html
@@ -23,9 +23,15 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
 
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-sms-1">Resend log in code</a></p>
+			<div class="text-center mb-4">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-sms-1">Resend log in code</a>
+			</div>
 
-			<p>If you'd rather use an authentication app, <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.</p>
+			<div class="text-center my-2">
+				If you'd rather use an authentication app, <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.
+			</div>
+
+			<p></p>
 
 		</main>
 
