--- a/reports/sen2.html
+++ b/reports/sen2.html
@@ -16,13 +16,13 @@ title: Reporting
 
         <ul class="nav idx-tabs my-5">
           <li class="nav-item">
-            <a class="nav-link" href="#">Management reports</a>
+            <a class="nav-link" href="/reports">Management reports</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/reports">Standard exports</a>
+            <a class="nav-link" href="exports">Standard exports</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active"  aria-current="page" href="/reports/sen2">SEN2</a>
+            <a class="nav-link active"  aria-current="page" href="sen2">SEN2</a>
           </li>
         </ul>
 
