--- a/onboarding/p-reset.html
+++ b/onboarding/p-reset.html
@@ -21,7 +21,11 @@ title: EHC Hub
 				<input type="email" class="form-control" id="emailInput" placeholder="">
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Send email</a>
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
+
+			<div class="text-center my-2">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a>
+			</div>
+
 		</main>
 
 	</div>
