--- a/onboarding/tfa-app-auth.html
+++ b/onboarding/tfa-app-auth.html
@@ -29,7 +29,11 @@ title: EHC Hub
 			</div>
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
+
+			<div class="text-center my-2">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a>
+			</div>
+	
 		</main>
 
 	</div>
