--- a/onboarding/tfa-email-auth.html
+++ b/onboarding/tfa-email-auth.html
@@ -29,8 +29,15 @@ title: EHC Hub
 			</div>
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Resend log in code</a></p>
-			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
+
+			<div class="text-center mb-4">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Resend log in code</a>
+			</div>
+
+			<div class="text-center my-2">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a>
+			</div>
+
 		</main>
 
 	</div>
